<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.svenruppert</groupId>
    <artifactId>dependencies</artifactId>
    <version>06.00.03</version>
  </parent>

  <groupId>org.rapidpm.event</groupId>
  <artifactId>junit5-testengines</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <inceptionYear>2013</inceptionYear>
  <organization>
    <name>Sven Ruppert</name>
    <url>http://www.svenruppert.com</url>
  </organization>

  <url>https://github.com/Java-Workshops/JUnit5-Testengines</url>
  <name>JUNit5 - Testengines - Workshop</name>
  <description>How to write Custom TestEngines</description>
  <scm>
    <url>https://github.com/Java-Workshops/JUnit5-Testengines</url>
    <connection>scm:git:https://github.com/Java-Workshops/JUnit5-Testengines.git</connection>
    <developerConnection>scm:git:https://github.com/Java-Workshops/JUnit5-Testengines.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <developers>
    <developer>
      <name>Sven Ruppert</name>
      <email>sven.ruppert@gmail.com</email>
      <roles>
        <role>Founder</role>
        <role>Developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/Java-Workshops/JUnit5-Testengines/issues</url>
  </issueManagement>
  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <properties>
    <deploy-repo-url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</deploy-repo-url>
    <deploy-repo-snapshots-url>https://s01.oss.sonatype.org/content/repositories/snapshots
    </deploy-repo-snapshots-url>

    <activateJavaOnly>true</activateJavaOnly>

    <jdk.version>21</jdk.version>
    <!--technical-->

<!--    &lt;!&ndash;Kotlin&ndash;&gt;-->
<!--    <kotlin.compiler.jvmTarget>${jdk.version}</kotlin.compiler.jvmTarget>-->
<!--    <kotlin.version>1.5.31</kotlin.version>-->
<!--    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>-->

    <pitest-prod-classes>org.rapidpm.*</pitest-prod-classes>
    <pitest-test-classes>junit.org.rapidpm*</pitest-test-classes>

    <jmh.version>1.23</jmh.version>

    <opentracing-api.version>0.33.0</opentracing-api.version>
    <asm.version>7.2</asm.version>

    <junit-platform-maven-plugin.timeout>300</junit-platform-maven-plugin.timeout>
    <!--        <junit-jupiter-api.version>5.12.1</junit-jupiter-api.version>-->
    <junit-jupiter-api.version>5.11.4</junit-jupiter-api.version>
    <!--        <junit-platform-launcher.version>1.12.1</junit-platform-launcher.version>-->
    <junit-platform-launcher.version>1.11.4</junit-platform-launcher.version>
  </properties>

  <distributionManagement>
    <repository>
      <id>deploy-repo-maven</id>
      <name>deploy-repo-maven</name>
      <url>${deploy-repo-url}</url>
    </repository>
    <snapshotRepository>
      <id>deploy-repo-maven-snapshots</id>
      <name>deploy-repo-maven-snapshots</name>
      <url>${deploy-repo-snapshots-url}</url>
    </snapshotRepository>
  </distributionManagement>

  <modules>
    <module>00-basics</module>
    <module>01-useless</module>
    <module>02-nanoengine</module>
    <module>03-microengine</module>
    <module>04-milliengine</module>

    <module>04-distributed-engine</module>
  </modules>

  <dependencies>


    <dependency>
      <groupId>com.svenruppert</groupId>
      <artifactId>core</artifactId>
      <version>06.00.03</version>
    </dependency>
    <dependency>
      <groupId>org.rapidpm</groupId>
      <artifactId>rapidpm-functional-reactive</artifactId>
      <version>01.00.03-RPM</version>
    </dependency>



<!--    <dependency>-->
<!--      <groupId>org.junit.platform</groupId>-->
<!--      <artifactId>junit-platform-launcher</artifactId>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

<!--    <dependency>-->
<!--      <groupId>org.junit.platform</groupId>-->
<!--      <artifactId>junit-platform-testkit</artifactId>-->
<!--      <version>${junit.jupiter.version}</version>-->
<!--      <scope>test</scope>-->
<!--    </dependency>-->

    <dependency>
      <groupId>com.github.javafaker</groupId>
      <artifactId>javafaker</artifactId>
      <version>1.0.2</version>
      <scope>test</scope>
    </dependency>


    <!--    <dependency>-->
    <!--      <groupId>net.jcip</groupId>-->
    <!--      <artifactId>jcip-annotations</artifactId>-->
    <!--    </dependency>-->
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.2</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <scope>complie</scope>
    </dependency>

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <!--<goal>jar</goal> do not define it here again !!-->
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>